<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <ImageView
        android:id="@+id/widget_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/base_sim_widget_view_description"
        android:src="@drawable/bg"
        android:scaleType="fitXY" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingEnd="52dp"
        android:paddingVertical="8dp">
        <FrameLayout
            android:id="@+id/layout_sim1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/bg_sim1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/sim_view_background"
                android:src="@drawable/card_container_bg"
                android:scaleType="fitXY" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="12dp"
                android:paddingTop="8dp"
                android:paddingBottom="12dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <FrameLayout
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_marginEnd="8dp">
                        <ImageView
                            android:id="@+id/bg_icon_sim1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/sim_number_chip"
                            android:src="@drawable/oval_bg"
                            android:scaleType="fitXY" />
                        <TextView
                            android:id="@+id/txt_icon_sim1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="sans-serif-medium"
                            android:text="1"
                            android:textSize="12sp"
                            tools:ignore="HardcodedText" />
                    </FrameLayout>
                    <TextView
                        android:id="@+id/txt_sim1_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-medium"
                        android:letterSpacing="0.01"
                        android:lineHeight="20sp"
                        android:lineSpacingExtra="4sp"
                        android:maxLines="1"
                        android:textSize="16sp"
                        tools:targetApi="28" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_sim1_signal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="sans-serif-medium"
                        android:includeFontPadding="false"
                        android:lineHeight="26sp"
                        android:lineSpacingExtra="6sp"
                        android:text="@string/n_a"
                        android:textSize="20sp"
                        tools:targetApi="28" />
                    <TextView
                        android:id="@+id/txt_sim1_band"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:fontFamily="sans-serif"
                        android:includeFontPadding="false"
                        android:text="@string/n_a"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
            <FrameLayout
                android:id="@+id/chip_sim1_tech"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_gravity="top|end"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:visibility="gone">
                <ImageView
                    android:id="@+id/bg_chip_sim1_tech"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAccessibility="no"
                    android:src="@drawable/chip_bg"
                    android:scaleType="fitXY" />
                <TextView
                    android:id="@+id/txt_sim1_tech"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-medium"
                    android:paddingHorizontal="10dp"
                    android:text="@string/n_a"
                    android:textSize="12sp" />
            </FrameLayout>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/layout_sim2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp">
            <ImageView
                android:id="@+id/bg_sim2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/sim_view_background"
                android:src="@drawable/card_container_bg"
                android:scaleType="fitXY" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="12dp"
                android:paddingTop="8dp"
                android:paddingBottom="12dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <FrameLayout
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_marginEnd="8dp">
                        <ImageView
                            android:id="@+id/bg_icon_sim2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/sim_number_chip"
                            android:src="@drawable/oval_bg"
                            android:scaleType="fitXY" />
                        <TextView
                            android:id="@+id/txt_icon_sim2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="sans-serif-medium"
                            android:text="2"
                            android:textSize="12sp"
                            tools:ignore="HardcodedText" />
                    </FrameLayout>
                    <TextView
                        android:id="@+id/txt_sim2_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-medium"
                        android:letterSpacing="0.01"
                        android:lineHeight="20sp"
                        android:lineSpacingExtra="4sp"
                        android:maxLines="1"
                        android:textSize="16sp"
                        tools:targetApi="28" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/txt_sim2_signal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="sans-serif-medium"
                        android:includeFontPadding="false"
                        android:lineHeight="26sp"
                        android:lineSpacingExtra="6sp"
                        android:text="@string/n_a"
                        android:textSize="20sp"
                        tools:targetApi="28" />
                    <TextView
                        android:id="@+id/txt_sim2_band"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:fontFamily="sans-serif"
                        android:includeFontPadding="false"
                        android:text="@string/n_a"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
            <FrameLayout
                android:id="@+id/chip_sim2_tech"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_gravity="top|end"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:visibility="gone">
                <ImageView
                    android:id="@+id/bg_chip_sim2_tech"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAccessibility="no"
                    android:src="@drawable/chip_bg"
                    android:scaleType="fitXY" />
                <TextView
                    android:id="@+id/txt_sim2_tech"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-medium"
                    android:paddingHorizontal="10dp"
                    android:text="@string/n_a"
                    android:textSize="12sp" />
            </FrameLayout>
        </FrameLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/btn_refresh_dualsim"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="top|end"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp">
        <ImageView
            android:id="@+id/bg_btn_refresh_dualsim"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/refresh_button_background"
            android:src="@drawable/btn_icon_bg"
            android:scaleType="fitXY" />
        <ImageView
            android:id="@+id/img_refresh_dualsim"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center"
            android:contentDescription="@string/refresh_button_icon"
            android:src="@drawable/ic_refresh" />
    </FrameLayout>
</FrameLayout>